# icy

./: Cargo.toml  package-lock.json
crates/flcs/: Cargo.toml
crates/flcs/src/: app.rs  cli.rs  lib.rs  main.rs  message.rs
crates/fs_cli/: Cargo.toml
crates/fs_cli/src/: lib.rs
crates/fs_plugin/: Cargo.toml
crates/fs_plugin_manager/: Cargo.toml
crates/yadi/: Cargo.toml
crates/yadi/src/: factory.rs  lib.rs  registry.rs
crates/yadi_derive/src/: injectable.rs  lib.rs
plugins/fs_clock/: Cargo.toml
plugins/fs_dummy_plugin/: Cargo.toml
plugins/fs_dummy_plugin/src/: lib.rs
plugins/icy_wallpapers_plugin/: Cargo.toml
shell/fs/: Cargo.toml
shell/fs/src/: fs.rs  main.rs
shell/fs_cli/: Cargo.toml
shell/fs_cli/src/: cli.rs
shell/fs_feature/: Cargo.toml
shell/fs_feature/src/: lib.rs
shell/fs_msg/: Cargo.toml
shell/fs_plugin/: Cargo.toml
shell/fs_plugin/src/: lib.rs
shell/fs_plugin_manager/: Cargo.toml
shell/fs_plugin_manager/src/: lib.rs
shell/fs_plugin_mgr/: Cargo.toml
shell/fs_shell/: Cargo.toml
shell/fs_shell/src/: cli.rs  directories.rs  lib.rs  main.rs  shell.rs
shell/fs_shell/src/cli/: args.rs
shell/icy/: Cargo.toml
shell/icy/src/: directories.rs  lib.rs  lock.rs  main.rs  shell.rs  tracing.rs
shell/icy/src/cli/: handle.rs  mod.rs  parser.rs  style.rs
shell/icy/src/config/: look_and_feel.rs  mod.rs  root.rs
shell/icy/src/shell/: message.rs  mod.rs  state.rs  update.rs  view.rs
shell/icy/src/shell/feature/: layer_surface_feature.rs  mod.rs  window_feature.rs
shell/icy/src/shell/feature/edges/: action.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
shell/icy/src/shell/feature/wallpapers/: action.rs  message.rs  state.rs  update.rs  view.rs
shell/icy/src/shell/util/: mod.rs
shell/icy/src/util/: from_ref.rs  mod.rs
shell/icy_msg/: Cargo.toml
shell/icy_plugin/: Cargo.toml
shell/icy_plugin_macros/: Cargo.toml
shell/icy_plugin_manager/: Cargo.toml
shell/icy_types/: Cargo.toml
shell/icy_types/src/: lib.rs  lock_message.rs  shell_message.rs
src/: lib.rs  main.rs
src/app/: cli.rs  message.rs  mod.rs  shell.rs
src/feature/: feature_enum.rs  gallery.rs  layer_surface_feature.rs  mod.rs
src/feature/clock/: action.rs  message.rs  mod.rs  state.rs
src/feature/edges/: action.rs  state.rs
src/feature/panels/: action.rs  message.rs  state.rs
src/feature/wallpaper/: mod.rs
src/feature/wallpapers/: action.rs  mod.rs  state.rs
src/feature/windows/: action.rs  message.rs  mod.rs  window_descriptor.rs
src/util/: mod.rs  surface_id.rs
