[workspace]
resolver = "3"
members = ["shell/*", "plugins/*"]

[workspace.dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4" }
clap = { version = "4" }
ctrlc = { version = "3" }
directories = { version = "6" }
extism = { version = "1" }
extism-pdk = { version = "1" }
hyprland = { version = "0.4.0-beta.3" }
iced = { version = "0.13" }
iced_aw = { version = "0.12" }
iced_layershell = { version = "0.13" }
iced_sessionlock = { version = "0.13" }
icy_types = { path = "shell/icy_types" }
icy_plugin = { path = "shell/icy_plugin" }
icy_plugin_macros = { path = "shell/icy_plugin_macros" }
notify = { version = "8" }
rayon = { version = "1" }
serde = { version = "1" }
starship-battery = { version = "0.10" }
thiserror = { version = "2" }
tokio = { version = "1" }
toml = { version = "0.9" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
