[workspace]
resolver = "3"
members = ["shell/*"]

[workspace.dependencies]
anyhow = { version = "1" }
chrono = { version = "0.4" }
clap = { version = "4" }
ctrlc = { version = "3" }
daemonize = { version = "0.5" }
directories = { version = "6" }
hyprland = { version = "0.4.0-beta.3" }
iced = { git = "https://github.com/FilaCo/iced.git", branch = "master" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main" }
notify = { version = "8" }
serde = { version = "1" }
starship-battery = { version = "0.10" }
thiserror = { version = "2" }
tokio = { version = "1" }
toml = { version = "0.9" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3" }
