[package]
name = "fs_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
directories = { workspace = true }
notify = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
