[package]
name = "icy"
version = "0.1.0"
edition = "2024"
description = """

"""

[dependencies]
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
daemonize = { workspace = true }
directories = { workspace = true }
iced = { workspace = true, features = [
  "tokio",
  "multi-window",
  "advanced",
  "wgpu",
  "winit",
  "wayland",
] }
notify = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
