[package]
name = "icy"
description = "A simple, yet powerful Wayland status bar"
license = "MIT or Apache-2.0"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
strip = true
opt-level = 3
panic = "abort"

[dependencies]
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
daemonize = { workspace = true }
directories = { workspace = true }
iced = { workspace = true, features = [
  "tokio",
  "multi-window",
  "advanced",
  "wgpu",
  "winit",
  "wayland",
] }
notify = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
